appId: com.noahwallet.regtest
---
- launchApp
- waitForAnimationToEnd:
    timeout: 5000
- openLink: "exp+noahs-ark-wallet://?__expo_url=http%3A%2F%2F127.0.0.1%3A8081&__expo_disable_auto_launch=1&__expo_disable_onboarding=1"
- tapOn:
    text: "Open"
    optional: true
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    text: "Close"
    optional: true
- extendedWaitUntil:
    visible: "Create Wallet|Receive"
    timeout: 60000
